// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders accept colours correctly 1`] = `
<div>
  <span
    class="Button__Span-sc-1sjcsg7-0 Button__SpanAccept-sc-1sjcsg7-3 hrugIl eyoTOS"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders accept colours correctly on a thin button 1`] = `
<div>
  <span
    class="Button__Span-sc-1sjcsg7-0 Button__SpanAccept-sc-1sjcsg7-3 hrugIl eyoTOS"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders cancel colours correctly 1`] = `
<div>
  <span
    class="Button__Span-sc-1sjcsg7-0 Button__SpanCancel-sc-1sjcsg7-4 hrugIl dxSqyN"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders cancel colours correctly on a thin button 1`] = `
<div>
  <span
    class="Button__Span-sc-1sjcsg7-0 Button__SpanCancel-sc-1sjcsg7-4 hrugIl dxSqyN"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders default colours correctly 1`] = `
<div>
  <span
    class="Button__Span-sc-1sjcsg7-0 Button__SpanDefault-sc-1sjcsg7-2 hrugIl dRcHkR"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders default colours correctly on a thin button 1`] = `
<div>
  <span
    class="Button__SpanThin-sc-1sjcsg7-1 Button__SpanDefaultThin-sc-1sjcsg7-5 lbbraJ bUbOyF"
  >
    Button
  </span>
</div>
`;
